# dev-tutorials

./: README.md
intro-domain-driven/: .gitignore  README.md  pyproject.toml
intro-domain-driven/examples/: app.py  app_cqrs.py  resources.json
intro-domain-driven/resources/: main.py
intro-domain-driven/resources/application/queries/: resources.py
intro-domain-driven/resources/application/repositories/: resources.py
intro-domain-driven/resources/application/repositories/mem/: mem_resources.py
intro-domain-driven/resources/application/use_cases/: __init__.py  updating_name.py
intro-domain-driven/resources/domain/entites/: resource.py
intro-domain-driven/resources/infrastructure/queries/: __init__.py  json_file_resources.py
intro-domain-driven/resources/infrastructure/repositories/: __init__.py  json_file_resources.py
intro-domain-driven/tests/integration/: test_json_file_resources.py
intro-domain-driven/tests/unit/application/: test_updating_name.py
intro-domain-driven/tests/unit/domain/: test_resource.py
read-json-in-rust/: .gitignore  Cargo.toml  Makefile  README.html  README.md  read_json_in_python.py  read_json_in_rust.py  stream_json_in_python.py  streaming.md
read-json-in-rust/src/: main.rs  stream_json.rs
snapshot-testing-in-python/: .gitignore  README.md  pyproject.toml
snapshot-testing-in-python/src/snapshot_testing_in_python/: __init__.py
snapshot-testing-in-python/tests/: test_all.py
snapshot-testing-in-python/tests/__snapshots__/: test_all.ambr
snapshot-testing-in-python/tests/__snapshots__/test_all/: test_user.json
(+2 files in other folders)
