[package]
name = "read-json-in-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "stream-json-in-rust"
path = "src/stream_json.rs"

[dependencies]
serde = "1.0.188"
serde_json = "1.0.96"
struson = { version = "0.3.0", features = ["serde"] }
