[project]
name = "snapshot-testing-in-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Kristoffer Andersson", email = "kristoffer.andersson@gu.se" }
]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "syrupy>=4.9.1",
]
